fixed the overflowing layout

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
   font-weight: 400;
   background-color: #000000f5;
   color: white;
+  overflow: hidden;
 }
 
 html {
